# NewsWeaver

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml  skill.md
src/newsweaver/: __init__.py  cli.py  commands.py  config.py  exporter.py  extractor.py  generator.py  pipeline.py  publisher.py  scheduler.py  templates.py  topic.py  utils.py  webapp.py
src/newsweaver/fetcher/: base.py  bing.py  rss.py
src/newsweaver/llm/: client.py  prompts.py
src/newsweaver/memory/: compact.py  store.py  trends.py
src/newsweaver/web/: app.js  index.html  styles.css
tests/: test_pipeline.py  test_trends.py  test_webapp.py
