[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsweaver"
version = "1.0.0"
description = "可定制 AI 资讯 Agent - 自动采集、分析、生成新闻报道"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "readability-lxml>=0.8",
    "openai>=1.0",
]

[project.scripts]
newsweaver = "newsweaver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
